--- a/techbro/templates/signin.html
+++ b/techbro/templates/signin.html
@@ -28,6 +28,7 @@
                 <input type="submit" value="SignIn">
             </div>
         </form>
+        <a class="btn btn-warning text-white my-3" href="{% url 'password_reset' %}">Forgot password?</a>
     </div>
 </div>
 
