--- a/techbro/templates/password/password_reset_confirm.html
+++ b/techbro/templates/password/password_reset_confirm.html
@@ -6,7 +6,6 @@
 <!-- header  -->
 
 {% block content %}
-  
   <!--Password Reset Confirm-->
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -22,6 +21,7 @@
             </div>
         </div>
     </div>
+    <!--Password Reset Confirm done-->
 {% endblock content %}
 
 
